# Reti_di_calcolatori

./: README.md
01_struttura_client_server/struttura_client/: client  client.c
01_struttura_client_server/struttura_server/: server  server.c
Progetto/Codice/: CMakeLists.txt  Makefile  administrator_client.c  assistant_server.c  central_server.c  client_rev  compile_run.sh  rev  reviser_client.c  vaccinated_client.c  vaccination_center_server.c
Progetto/Codice/file/server/: vaccinated
Progetto/Codice/lib/: bool_utility.c  bool_utility.h  buffer_utility.c  buffer_utility.h  code_verification.c  code_verification.h  data_utility.c  data_utility.h  date_utility.c  date_utility.h  digits_utility.c  digits_utility.h  encryption_utility.c  file_utility.c  file_utility.h  green_pass_utility.c  green_pass_utility.h  menu_utility.c  menu_utility.h  menu_utility2.c  menu_utility2.h  package_utility.c  package_utility.h  sockets_utility.c  sockets_utility.h  thread_utility.c  thread_utility.h
Progetto/Codice/librerie_utility/: bool_utility.h  codice_fiscale.c  codice_fiscale.h  date_utility.c  date_utility.h  digits_utility.c  digits_utility.h  string.c
Progetto/Codice/output/: centro_vaccinale  client_administrator  client_amministratore  client_rev  client_reviser  client_revisore  client_vaccinale  client_vaccinato  server_ass  server_assistente  server_centrale  server_centro_vaccinale  servver_cen
Progetto/Ingegneria_del_software/: Green Pass.drawio  note.docx
Progetto_Green_Pass_Roberto_Vecchio_Gaetano_Ippolito_Francesco_Mabilia/: CTS_test  administrator_client.c  vaccinated_client.c  vaccination_center_server.c
Progetto_Green_Pass_Roberto_Vecchio_Gaetano_Ippolito_Francesco_Mabilia/file/client/: tessera_sanitaria_codici_regione
Progetto_Green_Pass_Roberto_Vecchio_Gaetano_Ippolito_Francesco_Mabilia/file/server/: vaccinated
Progetto_Green_Pass_Roberto_Vecchio_Gaetano_Ippolito_Francesco_Mabilia/lib/: buffer_utility.c  code_verification.h  digits_utility.h  encryption_utility.h  green_pass_utility.h  menu_utility.c  menu_utility.h  package_utility.h  sockets_utility.c  sockets_utility.h  thread_utility.c
Progetto_Green_Pass_Roberto_Vecchio_Gaetano_Ippolito_Francesco_Mabilia/output/: client_administrator  server_centrale
Teoria/: Processi Zombie
esempi_tutor/01_sock_function/: client_gethostname.c  server_getpeername.c
esercizi/01_wrapper/: CMakeLists.txt  client  client.c  server  server.c  socket_utility.c  socket_utility.h
esercizi/02_fork/: CMakeLists.txt  client.c  server.c  socket_utility.c  socket_utility.h
esercizi/03_client_counter/: CMakeLists.txt  client_test.sh
esercizi/04_client_dns/: CMakeLists.txt  client.c
esercizi/05_client_server_dns/: CMakeLists.txt  client.c  server.c  socket_utility.c
esercizi/06_client_server_request_response/: CMakeLists.txt  client.c  server.c  socket_utility.c  socket_utility.h
esercizi/07_cup/: .$cup.drawio.bkp  .$cup.drawio.dtmp  CMakeLists.txt  application_level_utility.c  application_level_utility.h  client  client.c  cup.drawio  exams  menu_utility.c  menu_utility.h  server  server.c  socket_utility.c  socket_utility.h
esercizi/08_client_server_multiplex/: CMakeLists.txt  client.c  number_utility.c  number_utility.h  server.c  signal_handler.c  socket_utility.c
esercizi/09_client_server_multiplex_v2/: CMakeLists.txt  bool_utility.c  client  server  server.c
esercizi/10_server_threads/: CMakeLists.txt  bool_utility.h  server.c  socket_utility.h  thread_utility.c  thread_utility.h
esercizi/11_server_threads_lopped/: CMakeLists.txt  server.c  signal_handler.h  socket_utility.c  thread_utility.c  thread_utility.h
static_routing/: lab.conf  pc3.startup  r1.startup  r2.startup
